<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"

    tools:context=".Welcome">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"

        android:paddingTop="30dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:orientation="vertical">


            <TextView
                android:id="@+id/tvBuscarClient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/searchClient"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etSearchClient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="NIT o Cédula:"
                android:inputType="number" />

            <Button
                android:id="@+id/btnCliente"
                android:layout_width="147dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_weight="1"
                android:background="@color/teal_700"
                android:text="@string/btnSearchClient"
                app:backgroundTint="@color/teal_700" />

            <TextView
                android:id="@+id/tvClient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="10dp"
                android:text="@string/client" />

            <EditText
                android:id="@+id/etClient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:focusable="false"
                android:inputType="textPersonName"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/tvId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/idClient" />

            <EditText
                android:id="@+id/etId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:focusable="false"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mail" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Representante" />

            <EditText
                android:id="@+id/etRepCompany"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:focusable="false"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/tvAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/adrressClient" />

            <EditText
                android:id="@+id/etAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:focusable="false"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/tvPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/phone" />

            <EditText
                android:id="@+id/etPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:focusable="false"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/tvEngenier"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/enginier" />

            <EditText
                android:id="@+id/etEngenier"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:focusable="false"
                android:inputType="textPersonName"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/tvService"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="20dp"
                android:text="@string/service" />

            <Spinner
                android:id="@+id/spinnerTipeService"
                android:layout_width="314dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/Servicios"
                android:paddingTop="20dp" />

            <TextView
                android:id="@+id/tvDescriptionServide"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="30dp"
                android:text="@string/descriptionServ" />

            <EditText
                android:id="@+id/etDescription"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:layout_weight="1"
                android:background="@color/cardview_shadow_end_color"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:paddingTop="20dp" />

            <Button
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:text="@string/btnSiguiente"
                app:backgroundTint="@color/teal_700" />

        </LinearLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>